2002-04-30 John Fleck <jfleck@inkstain.net>

	* help/C/procman-C.omf
	update OMF file to match new dtd for SK > 0.3.8

2002-04-03  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

	* configure.in (ALL_LINGUAS): Added pt_BR.

2002-03-31 John Fleck <jfleck@inkstain.net>

	* help/C/procman-C.omf
	fixing omf file, per bug #77052
	thanks to martin H. for catching this

2002-03-23  Kevin Vandersloot <kfv101@psu.edu>

	* Release 1.1.6

2002-03-04  Wang Jian  <lark@linux.net.cn>

	* configure.in: Added "zh_CN" to ALL_LINGUAS.

2002-02-24  Kevin Vandersloot <kfv101@psu.edu>
	
	* configure.in, gnome-system-monitor.spec: release 1.1.5

2002-02-11  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: add ja to ALL_LINGUAS

2002-02-11  Christophe Merlet  <redfox@eikonex.org>

	* configure.in: Added fr to ALL_LINGUAS.

2002-02-10  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in: bump version, disst smldocs.make

	* Makefile.am: add omf-instal so it gets disted

	* release 1.1.4

2002-02-06 John Fleck <jfleck@inkstain.net>

	* adding xmldocs.make to help reenable docs build

2002-02-07  Changwoo Ryu  <cwryu@debian.org>

	* configure.in: Added "ko" to ALL_LINGUAS.

2002-02-06  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am, configure.in: remove help stuff temporarily
	to fix the build

2002-02-05 John Fleck <jfleck@inkstain.net>

	adding documentation by Bill Day:
	added:
	* help/Makefile.am
	* help/C/Makefile.am
	* help/C/legal.xml
	* help/C/procman-C.omf
	* help/C/procman.xml
	* help/C/addColumn.png, sortButton.png, viewMenu.png,
	changePriority.png, memoryMaps.png, sortMenu2.png, colorPanel.png,
	moreInfo.png, sortMenu.png, columnContextMenu.png,
	processListing.png, systemMonitor.png
	* omf-install/Makefile.am
	changed:
	* Makefile.am
	* configure.in


2002-01-28  Kevin Vandersloot <kfv101@psu.edu>

	* configure.in, gnome-system-monitor.spec: bump version to 1.1.3
	and some small fixes for spec

	* release 1.1.3

2002-01-27  Seth Nickell  <snickell@stanford.edu>
