@@ -12,6 +12,6 @@ intl
 stamp-h
 stamp-h.in
 intltool-*
-procman.desktop
+*.desktop
 *.swp
 build
