@@ -3,3 +3,4 @@ Makefile
 Makefile.in
 procman
 *.swp
+gnome-system-monitor
