@@ -1,3 +1,10 @@
+2002-05-02  Abel Cheung  <maddog@linux.org.hk>
+
+	* .cvsignore, help/.cvsignore, help/C/.cvsignore,
+	omf-install/.cvsignore, src/.cvsignore: Ignore more files.
+
+	* src/callbacks.c: Add translator credits.
+
 2002-04-30 John Fleck <jfleck@inkstain.net>
 
 	* help/C/procman-C.omf
